# OwlSatOS

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  FreeRTOSConfig.h  OwlSatOS.cpp  README.md  SXUV5.md  build.ps1  build.sh  buildoutput.txt  initialize.bat  initialize.ps1  initialize.sh  owlsatos.Doxyfile  todo.md  toolchain.cmake
boards/: mainboard.h
include/: FreeRTOSConfig.h  console.h  sxuv5.h  tusb_config.h
include/OwlSat/: pin_assignment.h
sdk_overrides/hardware/: sync.h
src/: OwlSatOS.cpp  console.cpp  msc_disk.c  storage.cpp  storage.h  sxuv5_interface.cpp  usb_descriptors.c
